# Locus

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_AGENT.md  CONTRIBUTING.md  DIFFERENTIATORS.md  LICENSE  LOCUS.md  QUICKSTART.md  README.md  THIRD_PARTY_LICENSES  TODO.txt  gui_ux.md  manual-tests.txt  naming.md  requirements.md  roadmap.md  test-workspaces.md  vcpkg.json  vision.md
.claude/: settings.local.json
architecture/: agent-loop.md  diagrams.md  mcp.md  overview.md  tech-candidates.md  tech-stack.md  threading-model.md  tool-protocol.md  web-retrieval.md  workspace-index.md
architecture/decisions/: 0001-split-index-into-main-and-vectors.md  0002-embeddings-onnx-to-llama-cpp.md  0003-gui-imgui-to-wxwidgets.md  0004-workspace-bound-single-folder.md  README.md  (+5 more)
backlog/: README.md
cmake/: README.md
installer/: locus.iss  models-README.txt  package.ps1
models/: download-small.ps1  download-small.sh  download.ps1  download.sh
queries/: README.md
roadmap/: M0.md  M1.md  M2.md
scratchpad/: AI_DRIVEN_DEV_PLAYBOOK.md
scripts/: build_ws2.ps1  build_ws2_extract.py  build_ws3.ps1  check_no_em_dashes.cmake  check_no_em_dashes.py  non_ascii_allowlist.txt  strip_em_dashes.ps1  strip_em_dashes.py
src/: activity_event.h  agent_core.cpp  agent_core.h  chunker.cpp  cli_frontend.h  conversation.cpp  conversation.h  database.cpp  database.h  embedder.cpp  embedder.h  embedding_worker.cpp  embedding_worker.h  file_watcher.cpp  file_watcher.h  frontend.h  frontend_registry.h  index_query.cpp  index_query.h  indexer.cpp  indexer.h  llm_client.cpp  llm_client.h  main.cpp  process_registry.cpp  process_registry.h  reranker.h  session_manager.cpp  session_manager.h  sse_parser.cpp  sse_parser.h  system_prompt.h  tool.h  tool_registry.cpp  tool_registry.h  tools.cpp  tools.h  workspace.cpp  workspace.h
tests/: CMakeLists.txt  test_activity_log.cpp  test_agent_core.cpp  test_ansi_parser.cpp  test_attached_context.cpp  test_auto_commit.cpp  test_build_error_detector.cpp  test_capability_toggles.cpp  test_chat_activity_restructure.cpp  test_chat_diff_rendering.cpp  test_checkpoint_store.cpp  test_chunker_s618.cpp  test_command_path_scanner.cpp  test_compaction_pipeline.cpp  test_compaction_sentinel.cpp  test_convergence_signals.cpp  test_describe_tool.cpp  test_endpoint_profile.cpp  test_extractors.cpp  test_file_change_tracker.cpp  test_filter_output_tool.cpp  test_gitignore.cpp  test_global_config.cpp  test_grammar_coverage.cpp  test_index_query.cpp  test_indexer.cpp  test_injection_scanner.cpp  test_json_repair.cpp  test_lazy_manifest.cpp  test_list_directory_tool.cpp  test_llm_client.cpp  test_llm_context.cpp  test_manifest_budget.cpp  test_mcp.cpp  test_memory_bank_filter.cpp  test_memory_store.cpp  test_mention_parser.cpp  test_metrics.cpp  test_model_presets.cpp  test_outline_race.cpp  (+36 more)
tests/integration/: CMakeLists.txt  README.md  harness_fixture.cpp  harness_fixture.h  harness_frontend.cpp  harness_frontend.h  integration_main.cpp  session_listener.cpp  test_int_bg.cpp  test_int_compaction_replay.cpp  test_int_edit_file_shorthand.cpp  test_int_endpoint_switch.cpp  test_int_file_change_awareness.cpp  test_int_filter_output.cpp  test_int_fs_lifecycle.cpp  test_int_history_delete.cpp  test_int_interactive.cpp  test_int_lazy_manifest.cpp  test_int_max_tokens.cpp  test_int_mcp.cpp  test_int_memory.cpp  test_int_metrics.cpp  test_int_outline.cpp  test_int_plan.cpp  test_int_prompt_templates.cpp  test_int_read_file_alias_rejection.cpp  test_int_reasoning_watchdog.cpp  test_int_s618_compaction.cpp  test_int_search.cpp  test_int_session_restore.cpp  test_int_shell.cpp  test_int_slash.cpp  test_int_small_model_robustness.cpp  test_int_smoke.cpp  test_int_tabs_and_sessions.cpp  test_int_thinking.cpp  test_int_tool_calls.cpp  test_int_undo.cpp
tests/manual/: README.md  at-mentions.md  auto-commit.md  capabilities.md  chat-activity-restructure.md  chat-syntax-highlighting.md  compaction.md  endpoints.md  filter-output.md  gitignore.md  global-settings.md  inline-diffs-in-chat.md  llm-settings.md  mcp.md  memory-bank-panel.md  memory-bank.md  non-code-workspaces.md  notification-sounds.md  permission-presets.md  plan-mode.md  prompt-cost.md  prompt-templates.md  reasoning-watchdog.md  run-command-output-filter.md  small-model-robustness.md  terminal-panel.md  tool-approval.md  tool-safety.md  window-tray.md  workspace-trust.md  zim-reader.md
tests/mock_mcp_server/: main.cpp
tests/retrieval_eval/: CMakeLists.txt  README.md  curate.cpp  curate.h  eval_runner.cpp  eval_runner.h  main.cpp  metrics.cpp  metrics.h  queries.json  queries_ws2.json  queries_ws3.json  results_ws2.md  results_ws3.md
tests/sample_docs/: README.md
tests/support/: fake_workspace_services.h  shared_embedder.cpp  shared_embedder.h
tests/ui_automation/: AGENTIC_TESTING.md  CMakeLists.txt  README.md  agentic_server.cpp  agentic_server.h  drive_cli.ps1  locus-op.ps1  main.cpp  op.sh  op_dispatcher.cpp  op_dispatcher.h  script_runner.cpp  script_runner.h  submit_prompt.ps1  uia_session.cpp  uia_session.h
tests/ui_automation/output/agentic_TestLocalVibe2_s617/: findings.md  locus-config-seed.json
tests/ui_automation/scripts/: auto_compact.json  capabilities_first_open.json  chat_find_bar.json  chat_round_trip.json  compaction_dialog.json  endpoint_switch.json  help_slash.json  inline_diff_render.json  manage_sessions_open.json  mcp_open_json.json  memory_bank_panel.json  menu_and_view_toggles.json  mutating_tool_friction.json  permission_presets_chat_footer.json  permission_presets_settings.json  plan_mode.json  prompt_cost_and_watchdog_settings.json  sampler_reset_and_auto_detect.json  save_as_global_defaults.json  security_settings.json  session_menu_redesign.json  session_restore_round_trip.json  settings_persistence.json  settings_preset_dropdown.json  settings_tour.json  slash_popup.json  smoke.json  system_prompt_bubble.json  tabs_new_and_close.json  terminal_panel_run.json  terminal_per_tab.json  terminal_stdin.json  tool_approval_dialog.json  web_settings.json
tools/: README.md
(+503 files in other folders)
